--- a/shamir_secret_sharing/Untitled.ipynb
+++ b/shamir_secret_sharing/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c1ac64a7",
+   "id": "1612aa60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,25 +13,25 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0d1e135e",
+   "id": "773af0eb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "e = algo.Encoder(2, 4, 99)"
+    "e = algo.Encoder(3, 5, 999)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2d18d5d7",
+   "id": "d6b7e95a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " \n",
-      "82 x + 99\n"
+      "    2\n",
+      "83 x + 73 x + 999\n"
      ]
     }
    ],
@@ -43,30 +43,29 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ba8f57c5",
+   "id": "5375890d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(1, 78), (2, 57), (3, 36), (4, 15)] 103\n",
-      "[(1, 78), (4, 15)]\n"
+      "[(1, 146), (2, 468), (3, 956), (4, 601), (5, 412)] 1009\n",
+      "[(3, 956), (4, 601), (5, 412)]\n"
      ]
     }
    ],
    "source": [
     "print(shares, p)\n",
-    "shares.pop(1)\n",
-    "shares.pop(1)\n",
-    "print(shares)\n",
-    "shares, p = [(2, 25), (3, 97)], 109"
+    "shares.pop(0)\n",
+    "shares.pop(0)\n",
+    "print(shares)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f0fae9c5",
+   "id": "7aa4ea6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "821c9746",
+   "id": "834deb40",
    "metadata": {},
    "outputs": [
     {
@@ -84,29 +83,44 @@
      "output_type": "stream",
      "text": [
       " \n",
-      "-1 x + 3\n",
+      "-1 x + 4\n",
+      "     2\n",
+      "0.5 x - 4.5 x + 10\n",
       "new\n",
-      "y 25\n",
-      " \n",
-      "-25 x + 75\n",
-      " \n",
-      "-25 x + 75\n",
+      "y 956\n",
+      "     2\n",
+      "478 x - 4302 x + 9560\n",
+      "     2\n",
+      "478 x - 4302 x + 9560\n",
       "end\n",
       " \n",
-      "1 x - 2\n",
+      "1 x - 3\n",
+      "    2\n",
+      "-1 x + 8 x - 15\n",
       "new\n",
-      "y 97\n",
+      "y 601\n",
+      "      2\n",
+      "-601 x + 4808 x - 9015\n",
+      "      2\n",
+      "-601 x + 4808 x - 9015\n",
+      "end\n",
       " \n",
-      "97 x - 194\n",
-      " \n",
-      "97 x - 194\n",
+      "0.5 x - 1.5\n",
+      "     2\n",
+      "0.5 x - 3.5 x + 6\n",
+      "new\n",
+      "y 412\n",
+      "     2\n",
+      "206 x - 1442 x + 2472\n",
+      "     2\n",
+      "206 x - 1442 x + 2472\n",
       "end\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "99.0"
+       "999.0"
       ]
      },
      "execution_count": 6,
@@ -121,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8721a85b",
+   "id": "a12c70cd",
    "metadata": {},
    "outputs": [
     {
@@ -142,13 +156,15 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "005ca578",
+   "id": "633fb117",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[poly1d([-25.,  75.]), poly1d([  97., -194.])]"
+       "[poly1d([  478., -4302.,  9560.]),\n",
+       " poly1d([ -601.,  4808., -9015.]),\n",
+       " poly1d([  206., -1442.,  2472.])]"
       ]
      },
      "execution_count": 8,
