--- a/shamir_secret_sharing/Untitled.ipynb
+++ b/shamir_secret_sharing/Untitled.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "e = algo.Encoder(3, 5, 999)"
+    "e = algo.Encoder(3, 5, 99)"
    ]
   },
   {
@@ -31,7 +31,7 @@
      "output_type": "stream",
      "text": [
       "    2\n",
-      "83 x + 73 x + 999\n"
+      "62 x + 18 x + 99\n"
      ]
     }
    ],
@@ -50,8 +50,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(1, 146), (2, 468), (3, 956), (4, 601), (5, 412)] 1009\n",
-      "[(3, 956), (4, 601), (5, 412)]\n"
+      "[(1, 70), (2, 56), (3, 57), (4, 73), (5, 104)] 109\n",
+      "[(3, 57), (4, 73), (5, 104)]\n"
      ]
     }
    ],
@@ -79,48 +79,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " \n",
-      "-1 x + 4\n",
-      "     2\n",
-      "0.5 x - 4.5 x + 10\n",
-      "new\n",
-      "y 956\n",
-      "     2\n",
-      "478 x - 4302 x + 9560\n",
-      "     2\n",
-      "478 x - 4302 x + 9560\n",
-      "end\n",
-      " \n",
-      "1 x - 3\n",
-      "    2\n",
-      "-1 x + 8 x - 15\n",
-      "new\n",
-      "y 601\n",
-      "      2\n",
-      "-601 x + 4808 x - 9015\n",
-      "      2\n",
-      "-601 x + 4808 x - 9015\n",
-      "end\n",
-      " \n",
-      "0.5 x - 1.5\n",
-      "     2\n",
-      "0.5 x - 3.5 x + 6\n",
-      "new\n",
-      "y 412\n",
-      "     2\n",
-      "206 x - 1442 x + 2472\n",
-      "     2\n",
-      "206 x - 1442 x + 2472\n",
-      "end\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "999.0"
+       "99.0"
       ]
      },
      "execution_count": 6,
@@ -135,39 +96,18 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a12c70cd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-57\n",
-      "99\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "print(np.fmod(-57, 109))\n",
-    "print(317%109)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "id": "633fb117",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[poly1d([  478., -4302.,  9560.]),\n",
-       " poly1d([ -601.,  4808., -9015.]),\n",
-       " poly1d([  206., -1442.,  2472.])]"
+       "[poly1d([  28.5, -256.5,  570. ]),\n",
+       " poly1d([  -73.,   584., -1095.]),\n",
+       " poly1d([  52., -364.,  624.])]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
